Added further CSS

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 <button class="button-option"></button>
                 <button class="button-option"></button>
             </div>
+            <button id="restart">Restart</button>
+        </div>
+
+        <div class="popup">
+            <p id="message">Sample Message</p>
+            <button id="new-game">New Game</button>
         </div>
         <script src="script.js"></script>
     </body>
